--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "firebase-admin": "^13.2.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.488.0",
+    "mercadopago": "^2.4.0",
     "next": "15.3.0",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
